err/django-online-docs.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_online_docs-0.8.egg-info'...
Listing './lib/python3.5/site-packages/online_docs'...
Listing './lib/python3.5/site-packages/online_docs/static'...
Listing './lib/python3.5/site-packages/online_docs/static/online_docs'...
Listing './lib/python3.5/site-packages/online_docs/static/online_docs/css'...
Listing './lib/python3.5/site-packages/online_docs/static/online_docs/js'...
Listing './lib/python3.5/site-packages/online_docs/templates'...
Listing './lib/python3.5/site-packages/online_docs/templates/online_docs'...
Listing './lib/python3.5/site-packages/online_docs/templates/online_docs/partials'...
Listing './lib/python3.5/site-packages/online_docs/templatetags'...
Listing './lib/python3.5/site-packages/online_docs/tests'...
Listing './lib/python3.5/site-packages/online_docs/tests/integration_tests'...
Listing './lib/python3.5/site-packages/online_docs/tests/jasmine_tests'...
Listing './lib/python3.5/site-packages/online_docs/tests/jasmine_tests/spec'...
Listing './lib/python3.5/site-packages/online_docs/tests/test_static'...
Listing './lib/python3.5/site-packages/online_docs/tests/test_static/js'...
Compiling './lib/python3.5/site-packages/online_docs/views.py'...
***   File "./lib/python3.5/site-packages/online_docs/views.py", line 31
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
